WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131777
[New Multicolumn] REGRESSION: Column sets don't recalculate style when styles change (e.g., zooming)
https://bugs.webkit.org/show_bug.cgi?id=131777
Summary
[New Multicolumn] REGRESSION: Column sets don't recalculate style when styles...
Dave Hyatt
Reported
2014-04-16 17:26:02 PDT
Zoom any new multicolumn layout. The fonts don't update like they are supposed to. It looks like the styles of the multicolumn sets aren't being properly updated.
Attachments
Patch
(9.61 KB, patch)
2014-04-17 09:36 PDT
,
Dave Hyatt
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-17 09:36:17 PDT
Created
attachment 229554
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-17 09:38:20 PDT
Attachment 229554
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:1873: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:1873: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Enrica Casucci
Comment 3
2014-04-17 09:42:36 PDT
Comment on
attachment 229554
[details]
Patch Looks good to me.
Dave Hyatt
Comment 4
2014-04-17 09:46:08 PDT
Landed in
r167429
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug